#pragma once

namespace Domain::Core {
enum class Direction { Up, Down, Left, Right };
}
