#pragma once

namespace Domain::Core {
struct Glyph {
    char ch{'?'};
};
} // namespace Domain::Core
