#pragma once

namespace Domain::Core {
struct Stats {
    int hp{};
    int max_hp{};
    int atk{};
    int def{};
};
} // namespace Domain::Core
