#pragma once
namespace Domain::Entities {
enum class TileType {
    Wall,
    Floor
    // later: DoorClosed, DoorOpen
};
}
