#pragma once
namespace Domain::Entities {
enum class EnemyState { Resting, Chasing };
}
