#pragma once
#include "domain/entities/items/Item.hpp"

namespace Domain::Entities {
class Key final : public Item {
public:
    // empty by design
};
} // namespace Domain::Entities
