@startuml
title "Domain Model – Core Types & Entities (Current)"

package "Domain::Core" {
  enum Direction {
    Up
    Down
    Left
    Right
  }

  class EntityId {
    +value : uint32_t
  }

  class Position {
    +x : uint16_t
    +y : uint16_t
  }

  class Stats {
    +hp : int
    +max_hp : int
    +atk : int
    +def : int
  }

  class Glyph {
    +ch : char
  }

  interface IRng {
    +next_u32() : uint32_t
    +next_int(min_inclusive:int, max_inclusive:int) : int
  }

  class GameState {
    +map : Map
    +actors : vector<unique_ptr<Actor>>
    +items : vector<unique_ptr<Item>>

    +turn : uint64_t
    +victory : bool
    +defeat : bool
    +score : int

    +rules : GameRules
    +rng : IRng*
  }
}

package "Domain::Rules" {
  class GameRules {
    +map_w : uint16_t
    +map_h : uint16_t
    +max_rooms : uint16_t
    +room_min_size : uint16_t
    +room_max_size : uint16_t

    +enemy_count : uint16_t
    +potion_heal_max : int
    +drop_rates_note : string
  }
}

package "Domain::Entities" {
  enum TileType {
    Wall
    Floor
  }

  enum EnemyState {
    Resting
    Chasing
  }

  class Tile {
    +type : TileType
    +blocks_movement : bool
    +blocks_sight : bool
  }

  class GridTile

  class Map {
    +width() : uint16_t
    +height() : uint16_t
    +in_bounds(p: Position) : bool
    +is_passable(p: Position) : bool
    +is_transparent(p: Position) : bool
    +set_passable(p: Position, passable: bool) : bool
    +set_transparent(p: Position, transparent: bool) : bool
  }

  abstract class Actor {
    +id : EntityId
    +pos : Position
    +stats : Stats
    +glyph : Glyph
    {abstract} +action(state: GameState) : void
  }

  class Player {
    +has_key : bool
    +action(state: GameState) : void
  }

  class Enemy {
    +state : EnemyState
    +action(state: GameState) : void
  }

  class Item {
    +id : EntityId
    +pos : Position
  }

  class Key

  class HealthPotion {
    +healingValue : int
  }
}

' --- Relations ---
Map *-- GridTile : tiles_
GridTile *-- Tile : grid

Actor <|-- Player
Actor <|-- Enemy

Item <|-- Key
Item <|-- HealthPotion

GameState *-- Map
GameState *-- "0..*" Actor
GameState *-- "0..*" Item
GameState *-- GameRules
GameState ..> IRng : rng (borrowed)

@enduml
